--- a/mysql/1、基本内容.md
+++ b/mysql/1、基本内容.md
@@ -1,17 +1,28 @@
-# 字符串类型
+# Linux链接数据库
+- u 库名
+- h 地址
+- P 端口号
+- p 密码
+
+```java
+    mysql -u afo -h 127.0.0.1 -P 3306 -p
+```
+
+# 数据类型
+### 字符串类型
 
 |类型|大小|用途|
 |----|-----|-----|
-|CHAR	    |0-255字节	       | 定长字符串
-|VARCHAR	|0-65535 字节	   | 变长字符串
-|TINYBLOB	|0-255字节	       | 不超过 255 个字符的二进制字符串
-|TINYTEXT	|0-255字节	       | 短文本字符串
-|BLOB	    |0-65 535字节	    |二进制形式的长文本数据
-|TEXT	    |0-65 535字节	   | 长文本数据
-|MEDIUMBLOB	|0-16 777 215字节	|二进制形式的中等长度文本数据
-|MEDIUMTEXT	|0-16 777 215字节	|中等长度文本数据
-|LONGBLOB	|0-4 294 967 295字节|	二进制形式的极大文本数据
-|LONGTEXT	|0-4 294 967 295字节|	极大文本数据
+|CHAR	    |0-255字节	       | 定长字符串|
+|VARCHAR	|0-65535 字节	   | 变长字符串|
+|TINYBLOB	|0-255字节	       | 不超过 255 个字符的二进制字符串|
+|TINYTEXT	|0-255字节	       | 短文本字符串|
+|BLOB	    |0-65 535字节	    |二进制形式的长文本数据|
+|TEXT	    |0-65 535字节	   | 长文本数据|
+|MEDIUMBLOB	|0-16 777 215字节	|二进制形式的中等长度文本数据|
+|MEDIUMTEXT	|0-16 777 215字节	|中等长度文本数据|
+|LONGBLOB	|0-4 294 967 295字节|	二进制形式的极大文本数据|
+|LONGTEXT	|0-4 294 967 295字节|	极大文本数据|
 
 ```java
 MySQL 5.0 以上的版本：
@@ -23,3 +34,19 @@ GBK：一个汉字＝2个字节
 3、MySQL 检查长度，可用 SQL 语言来查看：
 select LENGTH(fieldname) from tablename
 ```
+
+
+# Update 
+```mysql
+# 替换某些字符
+UPDATE table_name SET field = REPLACE(field, 'old-string', 'new-string') WHERE Clause
+```
+
+# UNION 语句
+UNION 语句：用于将不同表中相同列中查询的数据展示出来；（不包括重复数据）   
+UNION ALL 语句：用于将不同表中相同列中查询的数据展示出来；（包括重复数据）    
+使用形式如下：    
+SELECT 列名称 FROM 表名称 UNION SELECT 列名称 FROM 表名称 ORDER BY 列名称；    
+SELECT 列名称 FROM 表名称 UNION ALL SELECT 列名称 FROM 表名称 ORDER BY 列名称；   
+
+[菜鸟教程](https://www.runoob.com/mysql/mysql-union-operation.html)
