--- a/mysql/1、基本内容.md
+++ b/mysql/1、基本内容.md
@@ -110,3 +110,8 @@ mysql> SELECT coalesce(name, '总数'), SUM(singin) as singin_count FROM  employ
 ### LEFT JOIN 将左边表全部数据拿出来混合右边数据
 
 ### RIGHT JOIN 将右表数据拿出来混合左边数据
+
+#### 例子
+```mysql
+SELECT a.bean,b.uid,b.phone FROM auction.u_user_auction a LEFT JOIN user.userinfo b ON b.uid = a.uid WHERE b.phone = 'e332Z5B6fOArwZvWugOXCQ==' AND a.uid = 217411468
+```
