--- a/android/自定义View/4、绘制顺序.md
+++ b/android/自定义View/4、绘制顺序.md
@@ -6,3 +6,5 @@
 ## 3.例：
 ### 3.1 给EditText添加绿色背景
 > 不能直接设置background，设置之后就没有下划线了，这时在draw()super之前drawcolor就ok了。
+## 4.运行实例（Layout 套一层 view）
+![](https://github.com/IRVING18/notes/blob/master/android/file/draw.png)
