--- a/android/自定义View/A11、触摸反馈次篇.md
+++ b/android/自定义View/A11、触摸反馈次篇.md
@@ -9,3 +9,5 @@
 ### 分发流程：    
 
 ![linear](https://github.com/IRVING18/notes/blob/master/android/file/dispatch1.png)
+
+![linear](https://github.com/IRVING18/notes/blob/master/android/file/yuanma.png)
