--- a/网络协议/1、非对称加密、编码.md
+++ b/网络协议/1、非对称加密、编码.md
@@ -18,6 +18,9 @@ DSA：专门用来签名，速度快
 - 4、Base64之后数据会变大，三个字符变成4个字符。
  因为一个字符8个字节，然后Base64会切分成6个字节转成一个64中的字符,
 - 5、Base64不会更安全，安全只能通过加密。Base64也不会更高效，长度会增加数据长度增长不可能高效。
+- 6、为什么要使用base64?
+  - 6.1 在SMPT 等协议，只能使用文本传输数据。二进制图片的数据传输通过base64算法处理成文本，方便传输
+  - 6.2 在数据库、xml中需要存储二进制数据时，base64可以将二进制转成文本，方便存储。
 
 ## base64的对应表
 ![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/base64-1.png)
