--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -1,4 +1,7 @@
-# 一、TypeEvaluator
+# 目录
+- [一、估值器 TypeEvaluator](#jump1)
+
+# <p id="jump1" />一、TypeEvaluator 估值器
 ## 1.ArgbEvaluator 来做颜色渐变的动画
 **例子1：**
 > 使用系统自带的ArgbEvaluator
