--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -1,8 +1,16 @@
 # 目录
 - [一、估值器 TypeEvaluator](#jump1)
-
+  - [（1）系统自带估值器](#jump1_1)
+  - [（2）自定义估值器](#jump1_2)
+    - [1.ProVinceEvaluator 城市字段String类型估值器](#jump1_2_1)
+    - [2.CubicBezierPointFTypeEvaluator 贝塞尔曲线](#jump1_2_2)
 # <p id="jump1" />一、TypeEvaluator 估值器
-## 1.ArgbEvaluator 来做颜色渐变的动画
+> 估值器，用来计算动画过程中的值
+
+## <p id="jump1_1" />（1）系统自带估值器
+![](https://github.com/IRVING18/notes/blob/master/android/file/commonTypeEvaluator.png)
+
+### 1.ArgbEvaluator 来做颜色渐变的动画
 **例子1：**
 > 使用系统自带的ArgbEvaluator
 ```java
@@ -16,7 +24,7 @@ animator.start();
 > 自建HSV模式HsvEvaluator。
 [点这里](https://www.baidu.com)
  
-## 2.PointFEvaluator 来自定义其他Evaluator 计算器
+### 2.PointFEvaluator 来自定义其他Evaluator 计算器
 > 自定义Evaluator 设置    
 ```java
     private class PointFEvaluator implements TypeEvaluator<PointF> {
@@ -37,7 +45,8 @@ animator.start();
     animator.setDuration(1000);
     animator.start();
 ```
-## 3.ProVinceEvaluator 
+## <p id="jump1_2" />（2）自定义估值器
+### <p id="jump1_2_1" />1.ProVinceEvaluator 城市字段String类型估值器
 > 自定义Evaluator 设置城市String类型参数动画改变    
 ```java
     private class ProVinceEvaluator implements TypeEvaluator<String> {
@@ -59,6 +68,72 @@ animator.start();
     animator.setInterpolator(new LinearInterpolator());
     animator.setDuration(1000);
     animator.start();
+```
+### <p id="jump1_2_2" />2.CubicBezierPointFTypeEvaluator 贝塞尔曲线
+![](https://github.com/IRVING18/notes/blob/master/android/file/cubic.gif)
+```java
+    public class CubicBezierPointFTypeEvaluator implements TypeEvaluator<PointF> {
+    /**
+     * 每个估值器对应一个属性动画，每个属性动画仅对应唯一一个控制点
+     */
+    PointF control;
+    /**
+     * 估值器返回值
+     */
+    PointF mPointF = new PointF();
+
+    public CubicBezierPointFTypeEvaluator(PointF control) {
+        this.control = control;
+    }
+
+    @Override
+    public PointF evaluate(float fraction, PointF startValue, PointF endValue) {
+        return getBezierPoint(startValue, endValue, control, fraction);
+    }
+
+    /**
+     * 二次贝塞尔曲线公式
+     *
+     * @param start   开始的数据点
+     * @param end     结束的数据点
+     * @param control 控制点
+     * @param t       float 0-1
+     * @return 不同t对应的PointF
+     */
+    private PointF getBezierPoint(PointF start, PointF end, PointF control, float t) {
+        mPointF.x = (1 - t) * (1 - t) * start.x + 2 * t * (1 - t) * control.x + t * t * end.x;
+        mPointF.y = (1 - t) * (1 - t) * start.y + 2 * t * (1 - t) * control.y + t * t * end.y;
+        return mPointF;
+    }
+}
+```
+> 配合ObjectAnimator使用   
+```java
+private PointF mPointF;
+
+public void setMPointF(PointF pointF) {
+    this.mPointF = pointF;
+    linear_background.setTranslationX(mPointF.x);
+    linear_background.setTranslationY(mPointF.y);
+}
+
+private void setExitAnimation(View view) {
+    //起点
+    PointF startP = new PointF();
+    startP.x = 0;
+    startP.y = 0;
+    //终点
+    PointF endP = new PointF();
+    endP.x = - 500;
+    endP.y = - 800;
+    //控制点位置
+    PointF controlP = new PointF();
+    controlP.x = startP.x;
+    controlP.y = -1200;
+    //通过估值器计算曲线坐标
+    ObjectAnimator anim = ObjectAnimator.ofObject(this, "mPointF", new CubicBezierPointFTypeEvaluator(controlP),startP,endP );
+    anim.setDuration(800);
+}
 ```
 # 二、PropertyValuesHolder和ObjectAnimator.ofPropertyValuesHolder() 多个动画一起执行
 ```java
