--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -4,6 +4,23 @@
   - [（2）自定义估值器](#jump1_2)
     - [1.ProVinceEvaluator 城市字段String类型估值器](#jump1_2_1)
     - [2.CubicBezierPointFTypeEvaluator 贝塞尔曲线](#jump1_2_2)
+- [二、插值器 Interpolator](#jump2)
+  - [（1）系统自带插值器](#jump2_1)
+    - [1.AccelerateDecelerateInterpolator 在动画开始与结束的地方速率改变比较慢，在中间的时候加速](#jump2_1_1)
+    - [2.AccelerateInterpolator 在动画开始的地方速率改变比较慢，然后开始加速](#jump2_1_2)
+    - [3.AnticipateInterpolator 开始的时候向后然后向前甩](#jump2_1_3)
+    - [4.AnticipateOvershootInterpolator 开始的时候向后然后向前甩一定值后返回最后的值](#jump2_1_4)
+    - [5.BounceInterpolator 动画结束的时候弹起](#jump2_1_5)
+    - [6.CycleInterpolator 动画循环播放特定的次数，速率改变沿着正弦曲线](#jump2_1_6)
+    - [7.DecelerateInterpolator 在动画开始的地方快然后慢](#jump2_1_7)
+    - [8.LinearInterpolator 以常量速率改变](#jump2_1_8)
+    - [9.OvershootInterpolator 向前甩一定值后再回到原来位置](#jump2_1_9)
+  - [（2）自定义插值器](#jump2_2)
+  - [（3）插值器的辅助妙用](#jump2_3)
+- [三、]
+
+
+
 # <p id="jump1" />一、TypeEvaluator 估值器
 > 估值器，用来计算动画过程中的值
 
