--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -17,7 +17,10 @@
     - [9.OvershootInterpolator 向前甩一定值后再回到原来位置](#jump2_1_9)
   - [（2）自定义插值器](#jump2_2)
   - [（3）插值器的辅助妙用](#jump2_3)
-- [三、]
+- [三、高级使用方式](#jump3)
+  - [（1）AnimatorSet 多个动画结合，可以控制执行顺序](#jump3_1) 
+  - [（2）PropertyValuesHolder.ofXXX() + ObjectAnimator.ofPropertyValuesHolder() 多个属性动画组合](#jump3_2)
+  - [（3）Keyframe.ofXXX() + PropertyValuesHolders.ofKeyframe() + ObjectAnimator.ofPropertyValuesHolder() 把同一个属性拆分](#jump3_3)
 
 
 
@@ -152,22 +155,9 @@ private void setExitAnimation(View view) {
     anim.setDuration(800);
 }
 ```
-# 二、PropertyValuesHolder和ObjectAnimator.ofPropertyValuesHolder() 多个动画一起执行
-```java
-     // 使用 PropertyValuesHolder.ofFloat() 来创建不同属性的动画值方案
-     // 第一个： scaleX 从 0 到 1
-     // 第二个： scaleY 从 0 到 1
-     // 第三个： alpha 从 0 到 1
-     PropertyValuesHolder holder1 = PropertyValuesHolder.ofFloat("scaleX", 0, 1);
-     PropertyValuesHolder holder2 = PropertyValuesHolder.ofFloat("scaleY", 0, 1);
-     PropertyValuesHolder holder3 = PropertyValuesHolder.ofFloat("alpha", 0, 1);
-     // 然后，用 ObjectAnimator.ofPropertyValuesHolder() 把三个属性合并，创建 Animator 然后执行
-     ObjectAnimator objectAnimator = ObjectAnimator.ofPropertyValuesHolder(view, holder1, holder2, holder3);
-     objectAnimator.setDuration(2000);
-     objectAnimator.setInterpolator(new BounceInterpolator());
-     objectAnimator.start();
-```
-# 三、AnimatorSet 多个动画结合，可以控制执行顺序
+
+# <p id="jump3" />三、高级使用
+## <p id="jump3_1" />AnimatorSet 多个动画结合，可以控制执行顺序
 ```java
      ObjectAnimator animator1 = ObjectAnimator.ofFloat(view, "alpha", 0, 1);
      animator1.setDuration(2000);
@@ -185,7 +175,24 @@ private void setExitAnimation(View view) {
 
      animatorSet.start();
 ```
-# 四、PropertyValuesHolders.ofKeyframe() 把同一个属性拆分
+
+## <p id="jump3_2" /> 二、PropertyValuesHolder.ofXXX()和ObjectAnimator.ofPropertyValuesHolder() 多个动画一起执行
+```java
+     // 使用 PropertyValuesHolder.ofFloat() 来创建不同属性的动画值方案
+     // 第一个： scaleX 从 0 到 1
+     // 第二个： scaleY 从 0 到 1
+     // 第三个： alpha 从 0 到 1
+     PropertyValuesHolder holder1 = PropertyValuesHolder.ofFloat("scaleX", 0, 1);
+     PropertyValuesHolder holder2 = PropertyValuesHolder.ofFloat("scaleY", 0, 1);
+     PropertyValuesHolder holder3 = PropertyValuesHolder.ofFloat("alpha", 0, 1);
+     // 然后，用 ObjectAnimator.ofPropertyValuesHolder() 把三个属性合并，创建 Animator 然后执行
+     ObjectAnimator objectAnimator = ObjectAnimator.ofPropertyValuesHolder(view, holder1, holder2, holder3);
+     objectAnimator.setDuration(2000);
+     objectAnimator.setInterpolator(new BounceInterpolator());
+     objectAnimator.start();
+```
+
+## <p id="jump3_3" />、Keyframe.ofXXX() + PropertyValuesHolders.ofKeyframe() + ObjectAnimator.ofPropertyValuesHolder()把同一个属性拆分
 除了合并多个属性和调配多个动画，你还可以在 PropertyValuesHolder 的基础上更进一步，通过设置 Keyframe （关键帧），把同一个动画属性拆分成多个阶段。例如，你可以让一个进度增加到 100% 后再「反弹」回来。
 
 ```java
