--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -22,7 +22,7 @@
   - [（2）PropertyValuesHolder.ofXXX() + ObjectAnimator.ofPropertyValuesHolder() 多个属性动画组合](#jump3_2)
   - [（3）Keyframe.ofXXX() + PropertyValuesHolders.ofKeyframe() + ObjectAnimator.ofPropertyValuesHolder() 把同一个属性拆分](#jump3_3)
 
-
+- [文中部分图片来源:Carson带你学安卓](https://www.jianshu.com/p/2f19fe1e3ca1)
 
 # <p id="jump1" />一、TypeEvaluator 估值器
 > 估值器，用来计算动画过程中的值
