--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -5,7 +5,7 @@
     - [1.ProVinceEvaluator 城市字段String类型估值器](#jump1_2_1)
     - [2.CubicBezierPointFTypeEvaluator 贝塞尔曲线](#jump1_2_2)
 - [二、插值器 Interpolator](#jump2)
-  - [（1）系统自带插值器](#jump2_1)
+  - [（1）系统自带插值器 & xml/java使用方式](#jump2_1)
     - [1.AccelerateDecelerateInterpolator 在动画开始与结束的地方速率改变比较慢，在中间的时候加速](#jump2_1_1)
     - [2.AccelerateInterpolator 在动画开始的地方速率改变比较慢，然后开始加速](#jump2_1_2)
     - [3.AnticipateInterpolator 开始的时候向后然后向前甩](#jump2_1_3)
@@ -160,6 +160,43 @@ private void setExitAnimation(View view) {
 > 插值器，用来控制动画过程速率、偏移量的
 
 ## <p id="jump2_1" />（1）系统自带插值器
+使用方式
+
+```java
+/*
+ * 使用方式1：xml
+ * 主要是设置插值器属性 android:interpolator
+ */
+ <?xml version="1.0" encoding="utf-8"?>
+    <scale xmlns:android="http://schemas.android.com/apk/res/android"
+
+        // 通过资源ID设置插值器
+        android:interpolator="@android:anim/overshoot_interpolator"
+        android:duration="3000"
+        android:fromXScale="0.0"
+        android:fromYScale="0.0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="2"
+        android:toYScale="2" />
+ >
+
+/*
+ * 使用方式2：java
+ */
+// 步骤1:创建 需要设置动画的 视图View
+Button mButton = (Button) findViewById(R.id.Button);
+// 步骤2：创建透明度动画的对象 & 设置动画效果
+Animation alphaAnimation = new AlphaAnimation(1,0);
+// 步骤3：创建对应的插值器类对象
+alphaAnimation.setDuration(3000);
+Interpolator overshootInterpolator = new OvershootInterpolator();
+// 步骤4：给动画设置插值器
+alphaAnimation.setInterpolator(overshootInterpolator);
+// 步骤5：播放动画
+mButton.startAnimation(alphaAnimation);
+```
+
 ### <p id="jump2_1_1"/>1.AccelerateDecelerateInterpolator 在动画开始与结束的地方速率改变比较慢，在中间的时候加速
 ### <p id="jump2_1_2"/>2.AccelerateInterpolator 在动画开始的地方速率改变比较慢，然后开始加速
 ### <p id="jump2_1_3"/>3.AnticipateInterpolator 开始的时候向后然后向前甩
