--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -214,6 +214,79 @@ mButton.startAnimation(alphaAnimation);
 ![](https://github.com/IRVING18/notes/blob/master/android/file/interpolator.gif)
 
 ## <p id="jump2_2" />（2）自定义插值器
+> 根据动画的进度（0%-100%）计算出当前属性值改变的百分比
+
+### 1、实现方式： Interpolator 或 TimeInterpolator 接口
+> 1、补间动画 实现 Interpolator接口；属性动画实现TimeInterpolator接口
+> 
+> 2、TimeInterpolator接口是属性动画中新增的，用于兼容Interpolator接口，这使得所有过去的Interpolator实现类都可以直接在属性动画使用
+
+
+```java
+// Interpolator接口
+public interface Interpolator {  
+
+    // 内部只有一个方法：getInterpolation()
+     float getInterpolation(float input) {  
+        // 参数说明
+        // input值值变化范围是0-1，且随着动画进度（0% - 100% ）均匀变化
+        // 即动画开始时，input值 = 0；动画结束时input = 1
+        // 而中间的值则是随着动画的进度（0% - 100%）在0到1之间均匀增加
+        
+      ...// 插值器的计算逻辑
+
+      return xxx；
+      // 返回的值就是用于估值器继续计算的fraction值，
+    }  
+
+// TimeInterpolator接口
+// 同上
+public interface TimeInterpolator {  
+  
+    float getInterpolation(float input){
+         ...
+    };  
+}  
+```
+
+看两个系统的插值器源码就理解参数意义了
+
+```java
+/*
+ * 匀速差值器：LinearInterpolator
+ */
+@HasNativeInterpolator  
+public class LinearInterpolator extends BaseInterpolator implements NativeInterpolatorFactory {  
+   
+    ... // 仅贴出关键代码
+
+    public float getInterpolation(float input) {  
+        return input;  
+        // 没有对input值进行任何逻辑处理，直接返回
+        // 即input值 = fraction值
+        // 因为input值是匀速增加的，因此fraction值也是匀速增加的，所以动画的运动情况也是匀速的，所以是匀速插值器
+    }  
+
+/*
+ * 先加速再减速 差值器:AccelerateDecelerateInterpolator
+ */
+@HasNativeInterpolator  
+public class AccelerateDecelerateInterpolator implements Interpolator, NativeInterpolatorFactory {  
+      
+    ... // 仅贴出关键代码
+    
+    public float getInterpolation(float input) {  
+        return (float)(Math.cos((input + 1) * Math.PI) / 2.0f) + 0.5f;
+        // input的运算逻辑如下：
+        // 使用了余弦函数，因input的取值范围是0到1，那么cos函数中的取值范围就是π到2π。
+        // 而cos(π)的结果是-1，cos(2π)的结果是1
+        // 所以该值除以2加上0.5后，getInterpolation()方法最终返回的结果值还是在0到1之间。只不过经过了余弦运算之后，最终的结果不再是匀速增加的了，而是经历了一个先加速后减速的过程
+        // 所以最终，fraction值 = 运算后的值 = 先加速后减速
+        // 所以该差值器是先加速再减速的
+    }  
+}
+```
+
 ## <p id="jump2_3" />（3）插值器的辅助妙用
 ## 用法一：
 > Interpolator插值器的用法，getInterpolation(percent百分比)能获取插值器相关参数
