Update and rename 5、属性动画-初探.md to 5、属性动画-使用.md

--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -1,12 +1,21 @@
-# 属性动画 Property Animation
-# 1、ViewPropertyAnimator
+# 属性动画 Property Animation目录 基础使用
+- [一、ViewPropertyAnimator view自带动画](#jump1)
+- [二、ObjectAnimator 自动赋值给对象；依赖set()/get()方法](#jump2)
+- [三、ValueAnimator 只返回动画变化的值，由开发者自己决定值的用处](#jump3)
+- [四、基础属性设置](#jump4)
+  - [setDuration()](#jump4)
+  - [setInterpolator()](#jump4)
+  - [设置监听器](#jump4)
+- [五、高级用法](#jump5)
+
+# <p id="jump1"/>一、ViewPropertyAnimator
 ### 1.1基本用法
 ```java
 imageView.animate().translationZ(dpToPixel(15));
 ```
 ### 1.2方法汇总
 ![](https://github.com/IRVING18/notes/blob/master/android/file/anim1.jpg)
-# 2、ObjectAnimator
+#  <p id="jump2"/>二、ObjectAnimator
 ### 2.1使用方式
 - 1.如果是自定义控件，需要添加 setter / getter 方法；
 - 2.用 ObjectAnimator.ofXXX(target, propertyName, value1, value2) 创建 ObjectAnimator 对象；
@@ -33,7 +42,7 @@ imageView.animate().translationZ(dpToPixel(15));
 ### 2.3 注意：
   ofFloat，ofInt时 对应的propertyName要是相应的类型，ofFloat对应float。
   
-# 3、ValueAnimator 最基本的轮子
+#  <p id="jump3"/>三、ValueAnimator 最基本的轮子
 额外简单说一下 ValuesAnimator。很多时候，你用不到它，只是在你使用一些第三方库的控件，而你想要做动画的属性却没有 setter / getter 方法的时候，会需要用到它。
 
 除了 ViewPropertyAnimator 和 ObjectAnimator，还有第三个选择是 ValueAnimator。ValueAnimator 并不常用，因为它的功能太基础了。ValueAnimator 是 ObjectAnimator 的父类，实际上，ValueAnimator 就是一个不能指定目标对象版本的 ObjectAnimator。ObjectAnimator 是自动调用目标对象的 setter 方法来更新目标属性的值，以及很多的时候还会以此来改变目标对象的 UI，而 ValueAnimator 只是通过渐变的方式来改变一个独立的数据，这个数据不是属于某个对象的，至于在数据更新后要做什么事，全都由你来定，你可以依然是去调用某个对象的 setter 方法（别这么为难自己），也可以做其他的事，不管要做什么，都是要你自己来写的，ValueAnimator 不会帮你做。功能最少、最不方便，但有时也是束缚最少、最灵活。比如有的时候，你要给一个第三方控件做动画，你需要更新的那个属性没有 setter 方法，只能直接修改，这样的话 ObjectAnimator 就不灵了啊。怎么办？这个时候你就可以用 ValueAnimator，在它的 onUpdate() 里面更新这个属性的值，并且手动调用 invalidate()。
