--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -1,12 +1,18 @@
 # 属性动画 Property Animation目录 基础使用
 - [一、ViewPropertyAnimator view自带动画](#jump1)
 - [二、ObjectAnimator 自动赋值给对象；依赖set()/get()方法](#jump2)
+  - [1、ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end) 使用自定义估值器]()
+  - [2、ObjectAnimator.ofInt/Float(view,"properName",start,end) 系统自带估值器]()
+  - [3、ObjectAnimator.ofPropertyValuesHolder() 结合 PropertyValuesHolder.ofXXX()处理多个属性]() 
 - [三、ValueAnimator 只返回动画变化的值，由开发者自己决定值的用处](#jump3)
 - [四、基础属性设置](#jump4)
   - [setDuration()](#jump4)
   - [setInterpolator()](#jump4)
   - [设置监听器](#jump4)
 - [五、高级用法](#jump5)
+  - [（1）AnimatorSet 多个动画结合，可以控制执行顺序](#jump5_1) 
+  - [（2）PropertyValuesHolder.ofXXX() + ObjectAnimator.ofPropertyValuesHolder() 多个属性动画组合](#jump5_2)
+  - [（3）Keyframe.ofXXX() + PropertyValuesHolders.ofKeyframe() + ObjectAnimator.ofPropertyValuesHolder() 把同一个属性拆分](#jump5_3)
 
 # <p id="jump1"/>一、ViewPropertyAnimator
 ### 1.1基本用法
@@ -29,7 +35,7 @@ imageView.animate().translationZ(dpToPixel(15));
   2、一般如果需要绘制变化，需要在setterXX中invalidate();   **
 ### 2.2方法
   ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
-  > 设置插值器   
+  > 使用自定义估值器   
   
   ② ObjectAnimator.ofInt/Float(view,"properName",start,end)    
   > 设置变化参数的类型，开始值和结束值   
