--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -22,7 +22,7 @@ imageView.animate().translationZ(dpToPixel(15));
 
 
 #  <p id="jump2"/>二、ObjectAnimator
-### 2.1使用方式
+### 使用方式
 - 1.如果是自定义控件，需要添加 setter / getter 方法；
 - 2.用 ObjectAnimator.ofXXX(target, propertyName, value1, value2) 创建 ObjectAnimator 对象；
 - 3.用 start() 方法执行动画。    
@@ -36,11 +36,20 @@ imageView.animate().translationZ(dpToPixel(15));
 ObjectAnimator.ofXXX(target, propertyName, value1, value2)
 ```
 
+> **注意：  
+>  1、propertyName和view中的属性参数没关系，只和setterXX后XX有关系。   
+>  2、一般如果需要绘制变化，需要在setterXX中invalidate();   **
+  
+## <p id="jump2_1"/>（1）ObjectAnimator.ofInt/Float..() 系统自带基础属性动画 
+```java
+  //设置view 的可见度动画
+  ObjectAnimator alpha = ObjectAnimator.ofFloat(this, "alpha", 0f, 1f);
+  alpha.start();
+```
+|--|--|
+|ofFloat|设置float类型动画|
+|ofInt|设置Int类型动画|
 
-
-**注意：  
-  1、propertyName和view中的属性参数没关系，只和setterXX后XX有关系。   
-  2、一般如果需要绘制变化，需要在setterXX中invalidate();   **
 ### 2.2方法
   ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
   > 使用自定义估值器   
