--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -46,9 +46,11 @@ ObjectAnimator.ofXXX(target, propertyName, value1, value2)
   ObjectAnimator alpha = ObjectAnimator.ofFloat(this, "alpha", 0f, 1f);
   alpha.start();
 ```
-|--|--|
-|ofFloat|设置float类型动画|
-|ofInt|设置Int类型动画|
+
+方法名 | 说明
+---|---
+ofFloat | 设置float类型动画
+ofInt | 设置Int类型动画
 
 ### 2.2方法
   ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
