--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -45,12 +45,19 @@ ObjectAnimator.ofXXX(target, propertyName, value1, value2)
   //设置view 的可见度动画
   ObjectAnimator alpha = ObjectAnimator.ofFloat(this, "alpha", 0f, 1f);
   alpha.start();
+  
+  //设置view 背景颜色
+  ObjectAnimator bgAnim = ObjectAnimator.ofArgb(this, "backgroudColor", getResources().getColor(R.color.colorAccent), getResources().getColor(R.color.colorAccent));
+        bgAnim.start();
 ```
 
 方法名 | 说明
 ---|---
 ofFloat | 设置float类型动画
 ofInt | 设置Int类型动画
+ofArgb | 颜色渐变getResources().getColor()
+ofMultiFloat | 多个float
+ofMultiInt | 多个int
 
 ### 2.2方法
   ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
