--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -59,21 +59,116 @@ ofArgb | 颜色渐变getResources().getColor()
 ofMultiFloat | 多个float
 ofMultiInt | 多个int
 
-### 2.2方法
-  ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
-  > 使用自定义估值器   
-  
-  ② ObjectAnimator.ofInt/Float(view,"properName",start,end)    
-  > 设置变化参数的类型，开始值和结束值   
-  
-  ③ ObjectAnimator.ofPropertyValuesHolder(view,PropertyValuesHolder.ofFloat("propetyName1",start,end),PropertyValuesHolder.ofFloat("propetyName2",start,end))    
-  > 多个动画一起执行     
-  > PropertyValuesHolder.ofFloat/Int() //多组动画设置，结合上边方法同时执行   
-  > PropertyValuesHolder.ofKeyframe() //将同一属性拆分，然后有顺序的执行。比如后边进度条0-100，100-80。[点这里](https://github.com/IRVING18/notes/blob/master/android/自定义View/6、属性动画次篇.md)   
-  
-### 2.3 注意：
-  ofFloat，ofInt时 对应的propertyName要是相应的类型，ofFloat对应float。
-  
+## <p id="jump2_2"/>（2）PropertyValuesHolder.ofXXX()和ObjectAnimator.ofPropertyValuesHolder() 多个动画属性一起执行
+```java
+     // 使用 PropertyValuesHolder.ofFloat() 来创建不同属性的动画值方案
+     // 第一个： scaleX 从 0 到 1
+     // 第二个： scaleY 从 0 到 1
+     // 第三个： alpha 从 0 到 1
+     PropertyValuesHolder holder1 = PropertyValuesHolder.ofFloat("scaleX", 0, 1);
+     PropertyValuesHolder holder2 = PropertyValuesHolder.ofFloat("scaleY", 0, 1);
+     PropertyValuesHolder holder3 = PropertyValuesHolder.ofFloat("alpha", 0, 1);
+     // 然后，用 ObjectAnimator.ofPropertyValuesHolder() 把三个属性合并，创建 Animator 然后执行
+     ObjectAnimator objectAnimator = ObjectAnimator.ofPropertyValuesHolder(view, holder1, holder2, holder3);
+     objectAnimator.setDuration(2000);
+     objectAnimator.setInterpolator(new BounceInterpolator());
+     objectAnimator.start();
+```
+
+## <p id="jump2_3" />（3）Keyframe.ofXXX() + PropertyValuesHolders.ofKeyframe() + ObjectAnimator.ofPropertyValuesHolder()把同一个属性拆分
+
+> 除了合并多个属性和调配多个动画，你还可以在 PropertyValuesHolder 的基础上更进一步，
+
+> 通过设置 Keyframe （关键帧），把同一个动画属性拆分成多个阶段。例如，你可以让一个进度增加到 100% 后再「反弹」回来。
+
+
+```java
+   // 在 0% 处开始
+   Keyframe keyframe1 = Keyframe.ofFloat(0, 0);  
+   // 时间经过 50% 的时候，动画完成度 100%
+   Keyframe keyframe2 = Keyframe.ofFloat(0.5f, 100);  
+   // 时间见过 100% 的时候，动画完成度倒退到 80%，即反弹 20%
+   Keyframe keyframe3 = Keyframe.ofFloat(1, 80);  
+   PropertyValuesHolder holder = PropertyValuesHolder.ofKeyframe("progress", keyframe1, keyframe2, keyframe3);
+
+   ObjectAnimator animator = ObjectAnimator.ofPropertyValuesHolder(view, holder);  
+   animator.start();  
+```
+
+![](https://github.com/IRVING18/notes/blob/master/android/file/keyframe.gif)
+
+## <p id="jump2_4" />（4）ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end) 使用自定义估值器
+
+```java
+  //使用自定义估值器
+  ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
+```
+![](https://github.com/IRVING18/notes/blob/master/android/file/cubic.gif)
+```java
+    public class CubicBezierPointFTypeEvaluator implements TypeEvaluator<PointF> {
+    /**
+     * 每个估值器对应一个属性动画，每个属性动画仅对应唯一一个控制点
+     */
+    PointF control;
+    /**
+     * 估值器返回值
+     */
+    PointF mPointF = new PointF();
+
+    public CubicBezierPointFTypeEvaluator(PointF control) {
+        this.control = control;
+    }
+
+    @Override
+    public PointF evaluate(float fraction, PointF startValue, PointF endValue) {
+        return getBezierPoint(startValue, endValue, control, fraction);
+    }
+
+    /**
+     * 二次贝塞尔曲线公式
+     *
+     * @param start   开始的数据点
+     * @param end     结束的数据点
+     * @param control 控制点
+     * @param t       float 0-1
+     * @return 不同t对应的PointF
+     */
+    private PointF getBezierPoint(PointF start, PointF end, PointF control, float t) {
+        mPointF.x = (1 - t) * (1 - t) * start.x + 2 * t * (1 - t) * control.x + t * t * end.x;
+        mPointF.y = (1 - t) * (1 - t) * start.y + 2 * t * (1 - t) * control.y + t * t * end.y;
+        return mPointF;
+    }
+}
+```
+> 配合ObjectAnimator使用   
+```java
+private PointF mPointF;
+
+public void setMPointF(PointF pointF) {
+    this.mPointF = pointF;
+    linear_background.setTranslationX(mPointF.x);
+    linear_background.setTranslationY(mPointF.y);
+}
+
+private void setExitAnimation(View view) {
+    //起点
+    PointF startP = new PointF();
+    startP.x = 0;
+    startP.y = 0;
+    //终点
+    PointF endP = new PointF();
+    endP.x = - 500;
+    endP.y = - 800;
+    //控制点位置
+    PointF controlP = new PointF();
+    controlP.x = startP.x;
+    controlP.y = -1200;
+    //通过估值器计算曲线坐标
+    ObjectAnimator anim = ObjectAnimator.ofObject(this, "mPointF", new CubicBezierPointFTypeEvaluator(controlP),startP,endP );
+    anim.setDuration(800);
+}
+```
+
 #  <p id="jump3"/>三、ValueAnimator 最基本的轮子
 额外简单说一下 ValuesAnimator。很多时候，你用不到它，只是在你使用一些第三方库的控件，而你想要做动画的属性却没有 setter / getter 方法的时候，会需要用到它。
 
