--- a/android/自定义View/5、属性动画-使用.md
+++ b/android/自定义View/5、属性动画-使用.md
@@ -8,8 +8,9 @@
 - [三、ValueAnimator 只返回动画变化的值，由开发者自己决定值的用处](#jump3)
 - [四、AnimatorSet 多个动画结合，可以控制执行顺序](#jump4)
 - [五、基础属性设置](#jump5)
-  - [基础API](#jump5)
-  - [设置监听器](#jump5)
+  - [基础API](#jump5_1)
+  - [动画监听器](#jump5_2)
+  - [ViewPropertyAnimator 和 ObjectAnimator 差异](#jump5_3)
 
 
 # <p id="jump1"/>一、ViewPropertyAnimator
@@ -199,13 +200,13 @@ private void setExitAnimation(View view) {
 
   
 # <p id="jump5"/>五、基础属性设置
-### （1）基础API
+### <p id="jump5_1"/>（1）基础API
 方法名 | 说明
 ---|---
 setDuration() | 设置执行时间
 setInterpolator() | 设置速度插值器
 
-### (2) 动画监听器
+###<p id="jump5_2"/>（2）动画监听器
 ```java
   onAnimationStart(Animator)  
   > 当动画开始执行时，这个方法被调用。  
@@ -218,7 +219,7 @@ setInterpolator() | 设置速度插值器
 由于 ViewPropertyAnimator 不支持重复，所以这个方法对 ViewPropertyAnimator 相当于无效。
 ```
 
-### （3）viewPropertyAnimator、ObjectAnimator API差异
+### <p id="jump5_3"/>（3）viewPropertyAnimator、ObjectAnimator API差异
 
 差异 | ViewPropertyAnimator | ObjectAnimator
 ---|---|---
